# cmog

./: CMakeLists.txt  README.md
include/: arrayOperations.h  colors.h  imageGeneration.h
src/: arrayOperations.c  imageGeneration.c  main.c
